# model_installer

./: README.md  pyproject.toml
src/: installer.sh
