[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "model_installer"
version = "0.1.0"
description = "Shell-based AI model installer compatible with pyCERR"

dependencies = ["uv", ]

[tool.setuptools]
packages = ["model_installer"]
package-dir = {"model_installer" = "src"}

[tool.setuptools.package-data]
model_installer = ["installer.sh"]
